--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@bugsnag/js": "^7.22.3",
     "@bugsnag/plugin-react": "^7.19.0",
     "@coreui/react": "^4.7.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^1.9.4",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
@@ -26,6 +29,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "shx": "^0.3.4",
+    "swiper": "^11.2.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
