--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@bugsnag/js": "^7.22.3",
     "@bugsnag/plugin-react": "^7.19.0",
     "@coreui/react": "^4.7.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.4.2",
     "@reduxjs/toolkit": "^1.9.4",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
@@ -24,11 +27,16 @@
     "jspdf-autotable": "^3.5.28",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.8",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^12.2.0",
+    "react-phone-number-input": "^3.4.11",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-select": "^5.10.0",
     "shx": "^0.3.4",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.2.0",
     "yup": "^1.1.1"
   },
